2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 561807 – inotify_sub.c :: dup_dirname() fails to remove trailing
	'/'

	* inotify/inotify-sub.c (dup_dirname): Actually strip the trailing
	'/' away. Spotted by Dan Williams.

2008-11-21  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 561375 – Leaks mountpoint description

	* glocalfile.c: (get_mount_info): don't leak the mountpoint description
	string.

2008-11-21  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 561352 – Leak of icon description

	* gcontenttype.c: (g_content_type_get_icon): don't leak the XDG mimetype
	generic icon string.

2008-11-14  Matthias Clasen <mclasen@redhat.com>

	* gfileattribute.c: Add G_FILE_ATTRIBUTE_PREVIEW_ICON to doc table.

2008-11-12  Tor Lillqvist  <tml@novell.com>

	Bug 556415 - Crash on Windows 2000 in g_winhttp_vfs_init()

	* win32/gwinhttpvfs.h: Move the set of function pointers to
	winhttp.dll into a separate struct GWinHttpDllFuncs. Just have a
	pointer to that in the GWinHttpVfsClass.
	
	* win32/gwinhttpvfs.c: Move the lookup of functions from
	winhttp.dll into a function of its own, that stores the pointers
	in a separate GWinHttpDllFuncs variable. Add two bookeeping
	booleans lookup_done and funcs_found.

	Don't call g_io_extension_point_implement() to register the
	winhttp extension unless winhttp.dll has been successfully loaded
	and the required functions found in it.

	* win32/gwinhttp*.c: Adjust calls of the functions looked up from
	winhttp.dll correspondingly.

2008-10-28  Cosimo Cecchi  <cosimoc@gnome.org>

	reviewed by: Alexander Larsson <alexl@redhat.com>

	* gdatainputstream.c: Make the docs of g_dada_input_stream_read_line ()
	clearer about the behavior when there's no more content to read.

2008-10-27  Federico Mena Quintero  <federico@novell.com>

	* glocalfile.c (g_local_file_get_parse_name): Don't leak roundtripped_filename.

2008-10-27  Tor Lillqvist  <tml@novell.com>

	Bug 557592 - Missing include in gwinhttpfile.c
